@@ -5,6 +5,9 @@ NEW FEATURES
 
  * Relations Graph: print
 
+ * "Class" and "Activity" must not be visible within translations table and CSV export
+
+
 FIXES
 
  * Gis: Fault on Geo Server Layers
